--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,7 @@
     <h1>My Cart</h1>
   </header>
 
+  <% if !enhanced_cart.empty? %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +49,11 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+    <div class="alert alert-info" role="alert">
+      <h3>Your cart is empty!
+      Please follow link to <%= link_to 'Home', :products, class: "alert-link" %> page to add items to cart. </h3>
+    </div>
+  <% end %>
 
 </section>
