--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<header class="page-header">
+  <h1>Admin &raquo; Dashboard</h1>
+</header>
+  
+<div class="alert alert-info" role="alert">
+  <h3>Total number of products are: <%= @products.count %> </h3>
+</div>
+<div class="alert alert-info" role="alert">
+  <h3>Total number of categories are: <%= @categories.count %> </h3>
+</div>
