--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,6 +103,23 @@ form.button_to {
     text-transform: uppercase;
     font-style: italic;
   }
+
+  .navbar-text {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+  
+  #navbarDropdownAdmin {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  #nav-about {
+    color: white;
+    text-decoration: none;
+    padding-right: 0.75rem;
+    padding-left: 0.5rem;
+  }
 }
 
 .page-header {
