Implement Feature: User Authentication and Merge into Master branch

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -44,6 +44,15 @@
         </li> %>
       </ul>
       <ul class="navbar-nav">
+
+      <% if current_user %>
+          <span class="navbar-text">Hello, <%= current_user.first_name %></span>
+          <%= link_to "Logout", '/logout', class: "nav-link" %>
+        <% else %>
+          <%= link_to 'Login', '/login', class: "nav-link " %>
+          <%= link_to 'Register', new_user_path, class: "nav-link" %>
+        <% end %>
+
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle text-danger"
