--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,10 +1,39 @@
-<header class="page-header">
-  <h1>Admin &raquo; Dashboard</h1>
-</header>
-  
-<div class="alert alert-info" role="alert">
-  <h3>Total number of products are: <%= @products.count %> </h3>
-</div>
-<div class="alert alert-info" role="alert">
-  <h3>Total number of categories are: <%= @categories.count %> </h3>
-</div>
+<section class="admin-categories-index">
+
+  <header class="page-header">
+    <h1>Admin &raquo; Dashboard</h1>
+  </header>
+
+  <div class="panel panel-default counts">
+
+    <table class="table table-bordered">
+      <tbody>
+
+          <tr>
+            <td>
+              <h4>Products</h4>
+            </td>
+            <td>
+              <h4 class="text-center">
+                <%= link_to @product_count, [:admin, :products], class: 'link-success' %>
+              </h4>
+            </td>
+          </tr>
+
+          <tr>
+            <td>
+              <h4>Categories</h4>
+            </td>
+            <td>
+              <h4 class="text-center">
+                <%= link_to @category_count, [:admin, :categories], class: 'link-success' %>
+              </h4>
+            </td>
+          </tr>
+
+      </tbody>
+    </table>
+
+  </div>
+
+</section>
